# image_to_attitude

./: CMakeLists.txt  package.xml
src/: image_to_attitude.cpp
